--- a/VoxelFree.uplugin
+++ b/VoxelFree.uplugin
@@ -10,81 +10,57 @@
 	"DocsURL": "https://wiki.voxelplugin.com/",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/b08e5581837e4bbca486b61cdf2751bb",
 	"SupportURL": "https://discord.voxelplugin.com",
+
 	"EnabledByDefault": true,
 	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"Installed": false,
+
 	"Modules": [
 		{
 			"Name": "Voxel",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux",
-				"Mac"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux", "Mac"]
 		},
 		{
 			"Name": "VoxelGraph",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux",
-				"Mac"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux", "Mac"]
 		},
 		{
 			"Name": "VoxelHelpers",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux",
-				"Mac"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux", "Mac"]
 		},
 		{
 			"Name": "VoxelEditor",
 			"Type": "Editor",
 			"LoadingPhase": "PostEngineInit",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux",
-				"Mac"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux", "Mac"]
 		},
 		{
 			"Name": "VoxelGraphEditor",
 			"Type": "Editor",
 			"LoadingPhase": "PostEngineInit",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux",
-				"Mac"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux", "Mac"]
 		},
 		{
 			"Name": "VoxelEditorDefault",
 			"Type": "Editor",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux",
-				"Mac"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux", "Mac"]
 		},
 		{
 			"Name": "VoxelExamples",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
-			"WhitelistPlatforms": [
-				"Win64",
-				"Linux"
-			]
+			"WhitelistPlatforms": ["Win64", "Linux"]
 		}
 	],
+
 	"Plugins": [
 		{
 			"Name": "Niagara",
@@ -92,6 +68,10 @@
 		},
 		{
 			"Name": "ProceduralMeshComponent",
+			"Enabled": true
+		},
+		{
+			"Name": "PCG",
 			"Enabled": true
 		}
 	]
